--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>QUIZLET 2</title>
-    <script src="javascriptfile1.js"></script>
+    <script src="week08.js"></script>
 </head>
 <body>
     
