--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="week08.js"></script>
 </head>
 <body>
-    
+    <button onclick="console.log('button was clicked')">
+    Let the race begin
+</button>
 </body>
 </html>
