--- a/index4.html
+++ b/index4.html
@@ -16,6 +16,7 @@ sunShape.graphics.endFill();
 sunShape.x = 25;
 sunShape.y = 25;
 stage.addChild(sunShape);
+createjs.Tween.get(sunshape,{loop:true})
 stage.update();
 }
 </script>
@@ -34,7 +35,7 @@ padding-left: 0;
 padding-right: 0;
 }
 </style>
-</head>
+</head> 
 <body onLoad="init();">
 <canvas id="stage-canvas" width="550" height="400">
 This web browser does not support canvas.
