--- a/index4.html
+++ b/index4.html
@@ -16,17 +16,13 @@ sunShape.graphics.endFill();
 sunShape.x = 25;
 sunShape.y = 25;
 stage.addChild(sunShape);
-createjs.Tween.get(sunshape,{loop:true})
-.to({x:525, y=375}, 3000);
-createjs.Ticker.addEvent("tick", tickHandler);
-
-
+createjs.Tween.get(sunShape, {loop:true})
+    .to({x:525, y:375}, 3000);
+createjs.Ticker.addEventListener("tick",tickHandler);    
+}
 function tickHandler(e) {
-stage.update();
+    stage.update();
 }
-stage.update();
-}
-
 </script>
 <style>
 body {
